fixed side scrolling on smaller devices

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@
 
 html {
     width: 100%;
+    overflow-x: hidden;
 }
 
 body {
